--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/underscore.js"></script>
 	<script src="js/lightbox.js"></script>
 	<script src="js/jump.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
