--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="lightbox lightbox-display">
 			<!--<figure>-->
 				<img src="images/ya/2.jpg">
-				<figcaption class="lightbox-caption">Here is a cool image!</figcaption>
+				<div class="lightbox-caption">Here is a cool image!</div>
 			<!--</figure>-->
 		</div>
 
@@ -332,7 +332,7 @@
 		<div class="project-menu">
 			<h3> Projects </h3>
 			<hr></hr>
-				<h4><a href="#title-medley">medley</a></h4>
+				<h4><a id="menu-medley" href="#title-medley">medley</a></h4>
 				<h4><a href="">Canadian Undergraduate Neuroscience Conference</a></h4>
 				<h4><a href="#title-rsphoto">Reka Szepesvari Photography</a></h4>
 				<h4><a href="#title-school">St. Emeric Hungarian School</a></h4>
