Added fade-in when switching lightbox pix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		<div class="lightbox-overlay lightbox-display"></div>
 		<div class="lightbox lightbox-display">
 			<!--<figure>-->
-				<img src="images/ya/2.jpg">
+				<img class="main-img">
+				<img class="secondary-img">
 				<div class="lightbox-caption">Here is a cool image!</div>
 			<!--</figure>-->
 		</div>
