Added page title and SEO meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html> 
 <head>
+	<title>Re&#769;ka Szepesva&#769;ri - Design Portfolio</title>
+	
+	<meta name="author" content="Reka Szepesvari">
+	<meta name="keywords" content="Reka Szepesvari, Design, Graphic Design, Websites, Web Design, Illustrator, Photoshop, InDesign, Designer, Medley, UI, UX, User Interface, User Experience">
+	<meta name="description" content="Reka Szepesvari's Design Portfolio: Select works of illustrations, web design, and interface design.">
+	
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 
